--- a/src/web/templates/404.html
+++ b/src/web/templates/404.html
@@ -18,7 +18,7 @@
                 <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">
                     <i class="fas fa-home"></i> Go Home
                 </a>
-                <a href="{{ url_for('assignments') }}" class="btn btn-outline-primary btn-lg">
+                <a href="{{ url_for('student.assignments') }}" class="btn btn-outline-primary btn-lg">
                     <i class="fas fa-list"></i> View Assignments
                 </a>
             </div>
